--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,22 +1,26 @@
 .form {
-  width: 500px;
+  width: 100%;
   margin: 0 auto;
+  padding: 20px;
+  border: 1px solid grey;
+  border-radius: 8px;
 }
+
 .label {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
+  align-items: baseline;
   text-transform: uppercase;
   font-size: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 28px;
   background-color: transparent;
 }
 .input__name {
   width: 100px;
 }
 .input__data {
+  margin: 0;
   width: 100%;
+  /* width: 300px; */
   padding: 4px;
   font-size: 20px;
   outline: 2px solid #ffffff;
@@ -33,7 +37,7 @@
 .add__button {
   font-size: 20px;
   margin-top: 16px;
-  margin-bottom: 16px;
+
   transition: all cubic-bezier(0.25s, 0.7, 0.98, 0.86) 0s;
   cursor: pointer;
   padding: 4px 16px 4px;
@@ -51,4 +55,16 @@
 .add__button:focus {
   background: rgb(240, 240, 240);
   box-shadow: 0px 3px 10px 3px grey;
+}
+.field {
+  position: relative;
+  width: 100%;
+}
+.error__message {
+  position: absolute;
+
+  margin: 0;
+
+  font-size: 12px;
+  color: rgb(248, 162, 162);
 }
