--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,25 +1,19 @@
 .form {
   width: 500px;
   margin: 0 auto;
-  /* margin-top: 24px;
-  margin-bottom: 24px; */
+  display: block;
 }
-.input__name {
-  width: 150px;
-}
+
 .label {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  text-transform: uppercase;
-  font-size: 16px;
+  font-size: 20px;
+  gap: 8px;
   margin-bottom: 16px;
   background-color: transparent;
-  margin-left: 4px;
 }
 .input__data {
-  display: inline-block;
-  width: 100%;
   padding: 4px;
   font-size: 20px;
   outline: 2px solid #ffffff;
